@@ -35,6 +35,8 @@ Version 0.12
 
 - JavascriptLexer is smarter about what constitutes a regex (#356)
 
+- Add Applescript lexer, thanks to Andreas Amann (#330)
+
 
 Version 0.11.1
 --------------
